Add the common playbook

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@ inventory=./inventory
 sudo_user=projet
 ask_sudo_pass=True
 ask_pass=True
-roles_path=/home/projet/production/roles
+roles_path=./production/roles
 sudo_exe=sudo
 remote_user=projet
 executable=/bin/bash
