--- a/production/roles/common/tasks/main.yml
+++ b/production/roles/common/tasks/main.yml
@@ -25,7 +25,7 @@
 - name: Install the rsyslog client template
   ansible.builtin.template:
     src: ../templates/rsyslog.conf.j2
-    dest: ../templates/rsyslog.conf.j2
+    dest: /etc/rsyslog.conf
     owner: root
     group: root
     mode: 0644
