--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,6 +8,7 @@ sudo_exe=sudo
 remote_user=projet
 executable=/bin/bash
 host_key_checking=False
+ask_vault_pass=True
 
 [privilege_escalation]
 become=True
