--- a/production/roles/common/tasks/main.yml
+++ b/production/roles/common/tasks/main.yml
@@ -34,7 +34,7 @@
 - name: Install the CA certificate
   ansible.builtin.template:
     src: ../secrets/ca.crt
-    dest: ../etc/ssl/certs
+    dest: /etc/ssl/certs
     owner: root
     group: root
     mode: 0640
@@ -43,7 +43,7 @@
 - name: Install the rsyslog client certificate
   ansible.builtin.template:
     src: ../secrets/rsyslog.exo-industries.xyz.crt
-    dest: ../etc/ssl/certs
+    dest: /etc/ssl/certs
     owner: root
     group: root
     mode: 0640
@@ -52,7 +52,7 @@
 - name: Install the rsyslog certificate key
   ansible.builtin.template:
     src: ../secrets/rsyslog.exo-industries.xyz.pem
-    dest: ../etc/ssl/private
+    dest: /etc/ssl/private
     owner: root
     group: root
     mode: 0600
