--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -34,3 +34,13 @@
     mode: '0644'
   notify:
     - Restart bind9
+
+- name: Installation of named.conf.options
+  ansible.builtin.template:
+    src: ../templates/named.conf.options.j2
+    dest: /etc/bind/named.conf.options
+    owner: root
+    group: bind
+    mode: '0644'
+  notify:
+    - Restart bind9
