--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -44,3 +44,13 @@
     mode: '0644'
   notify:
     - Restart bind9
+
+- name: Installation of TSIG key
+  ansible.builtin.template:
+    src: ../templates/dns1-dns2.key.j2
+    dest: /etc/bind/
+    owner: root
+    group: bind
+    mode: '0640'
+  notify:
+    - Restart bind9
