--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -47,7 +47,7 @@
 
 - name: Installation of TSIG key
   ansible.builtin.template:
-    src: ../secrets/dns1-dns2.key.j2
+    src: ../secrets/dns1-dns2.key
     dest: /etc/bind/
     owner: root
     group: bind
