--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -40,6 +40,7 @@
 - name: Create the null device file
   ansible.builtin.command: mknod /var/lib/bind/dev/null c 1 3
   register: root
+  state: present
 
 - name: Apply rights for the special null device file
   ansible.builtin.file:
@@ -51,6 +52,7 @@
 - name: Create the random device file
   ansible.builtin.command: mknod /var/lib/bind/dev/random c 1 8
   register: root
+  state: present
 
 - name: Apply rights for the special random device file
   ansible.builtin.file:
