--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -38,9 +38,10 @@
     mode: '0750'
 
 - name: Create the null device file
-  ansible.builtin.command: mknod /var/lib/bind/dev/null c 1 3
-  register: root
-  state: present
+  ansible.builtin.command:
+    cmd: mknod /var/lib/bind/dev/null c 1 3
+    register: root
+    state: present
 
 - name: Apply rights for the special null device file
   ansible.builtin.file:
@@ -50,9 +51,10 @@
     mode: '0666'
 
 - name: Create the random device file
-  ansible.builtin.command: mknod /var/lib/bind/dev/random c 1 8
-  register: root
-  state: present
+  ansible.builtin.command:
+    cmd: mknod /var/lib/bind/dev/random c 1 8
+    register: root
+    state: present
 
 - name: Apply rights for the special random device file
   ansible.builtin.file:
