--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -39,25 +39,13 @@
 
 - name: Create the null device file
   ansible.builtin.command:
-    cmd: mknod /var/lib/bind/dev/null c 1 3 || true
-
-- name: Apply rights for the special null device file
-  ansible.builtin.file:
-    path: /var/lib/bind/dev/null
-    owner: root
-    group: root
-    mode: '0666'
+    cmd: mknod /var/lib/bind/dev/null c 1 3 -m 0666 || true
+    args: || true
 
 - name: Create the random device file
   ansible.builtin.command:
-    cmd: mknod /var/lib/bind/dev/random c 1 8 || true
-
-- name: Apply rights for the special random device file
-  ansible.builtin.file:
-    path: /var/lib/bind/dev/random
-    owner: root
-    group: root
-    mode: '0666'
+    cmd: mknod /var/lib/bind/dev/random c 1 8 -m 0666 || true
+    args: || true
 
 - name: Installation of db.10.168.192.in-addr.arpa
   ansible.builtin.template:
