--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -38,14 +38,10 @@
     mode: '0750'
 
 - name: Create the null device file
-  ansible.builtin.command:
-    cmd: mknod /var/lib/bind/dev/null c 1 3 -m 0666 || true
-    args: || true
+  ansible.builtin.shell: mknod /var/lib/bind/dev/null c 1 3 -m 0666 || true
 
 - name: Create the random device file
-  ansible.builtin.command:
-    cmd: mknod /var/lib/bind/dev/random c 1 8 -m 0666 || true
-    args: || true
+  ansible.builtin.shell: mknod /var/lib/bind/dev/random c 1 8 -m 0666 || true
 
 - name: Installation of db.10.168.192.in-addr.arpa
   ansible.builtin.template:
