--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -95,12 +95,11 @@
 
 - name: Copy all files in the chroot directory
   ansible.builtin.copy:
-    src: "{{ item }}"
+    src: /etc/bind/
     dest: /var/lib/bind/etc/bind/
     owner: root
     group: bind
     mode: '0640'
-  with_fileglob:
-    - /etc/bind/*
+    recurse: yes
   notify:
     - Restart bind9
