--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -97,6 +97,7 @@
   ansible.builtin.copy:
     src: /etc/bind/
     dest: /var/lib/bind/etc/bind/
+    remote_src: yes
     owner: root
     group: bind
     mode: '0640'
