--- a/production/roles/bind-secondary/tasks/main.yml
+++ b/production/roles/bind-secondary/tasks/main.yml
@@ -5,6 +5,62 @@
     - bind9
     - bind9-utils
 
+- name: Create the dev folder
+  ansible.builtin.file:
+    path: /var/lib/bind/dev
+    state: directory
+    owner: root
+    group: bind
+    mode: '0755'
+
+- name: Create the etc folder
+  ansible.builtin.file:
+    path: /var/lib/bind/etc/bind
+    state: directory
+    owner: root
+    group: bind
+    mode: '0755'
+
+- name: Create the run/named folder
+  ansible.builtin.file:
+    path: /var/lib/bind/var/run/named
+    state: directory
+    owner: root
+    group: bind
+    mode: '0755'
+
+- name: Create the cache folder
+  ansible.builtin.file:
+    path: /var/lib/bind/var/cache/bind
+    state: directory
+    owner: root
+    group: bind
+    mode: '0775'
+
+- name: Create the usr/share/dns folder
+  ansible.builtin.file:
+    path: /var/lib/bind/usr/share/dns
+    state: directory
+    owner: root
+    group: bind
+    mode: '0755'
+
+- name: Create the null device file
+  ansible.builtin.shell: mknod /var/lib/bind/dev/null c 1 3 -m 0666 || true
+
+- name: Create the random device file
+  ansible.builtin.shell: mknod /var/lib/bind/dev/random c 1 8 -m 0666 || true
+
+- name: Installation of named daemon settings file
+  ansible.builtin.template:
+    src: ../templates/named.j2
+    dest: /etc/default/named
+    owner: root
+    group: root
+    mode: '0644'
+  notify:
+    - Restart bind9
+
 - name: Installation of named.conf.local
   ansible.builtin.template:
     src: ../secrets/named.conf.local.j2
@@ -34,3 +90,23 @@
     mode: '0640'
   notify:
     - Restart bind9
+
+- name: Copy all files in the chroot directory
+  ansible.builtin.copy:
+    src: /etc/bind/
+    dest: /var/lib/bind/etc/bind/
+    remote_src: yes
+    owner: root
+    group: bind
+    mode: '0755'
+  notify:
+    - Restart bind9
+
+- name: Copy the root.hints in the chroot directory
+  ansible.builtin.copy:
+    src: /usr/share/dns/
+    dest: /var/lib/bind/usr/share/dns
+    remote_src: yes
+    owner: root
+    group: root
+    mode: '0755'
