--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -48,10 +48,12 @@
 - name: Create the null device file
   ansible.builtin.shell:
     cmd: mknod /var/lib/bind/dev/null c 1 3 -m 0666 2> /dev/null || true
+    executable: /bin/bash
 
 - name: Create the random device file
   ansible.builtin.shell:
     cmd: mknod /var/lib/bind/dev/random c 1 8 -m 0666 2> /dev/null || true
+    executable: /bin/bash
 
 - name: Installation of named daemon settings file
   ansible.builtin.template:
