--- a/production/roles/bind-secondary/tasks/main.yml
+++ b/production/roles/bind-secondary/tasks/main.yml
@@ -47,12 +47,12 @@
 
 - name: Create the null device file
   ansible.builtin.shell:
-    cmd: mknod /var/lib/bind/dev/null c 1 3 -m 0666 2> /dev/null || true
+    cmd: [ ! -e /var/lib/bind/dev/null ] && mknod /var/lib/bind/dev/null c 1 3 -m 0666
     executable: /bin/bash
 
 - name: Create the random device file
   ansible.builtin.shell:
-    cmd: mknod /var/lib/bind/dev/random c 1 8 -m 0666 2> /dev/null || true
+    cmd: [ ! -e /var/lib/bind/dev/random ] && mknod /var/lib/bind/dev/random c 1 8 -m 0666
     executable: /bin/bash
 
 - name: Installation of named daemon settings file
