--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -46,14 +46,14 @@
     mode: '0755'
 
 - name: Create the null device file
-  ansible.builtin.shell:
-    cmd: [ ! -e /var/lib/bind/dev/null ] && mknod /var/lib/bind/dev/null c 1 3 -m 0666
-    executable: /bin/bash
+  ansible.builtin.command: mknod /var/lib/bind/dev/null c 1 3 -m 0666
+  args:
+    creates: /var/lib/bind/dev/null
 
 - name: Create the random device file
-  ansible.builtin.shell:
-    cmd: [ ! -e /var/lib/bind/dev/random ] && mknod /var/lib/bind/dev/random c 1 8 -m 0666
-    executable: /bin/bash
+  ansible.builtin.command: mknod /var/lib/bind/dev/random c 1 8 -m 0666
+  args:
+    creates: /var/lib/bind/dev/random
 
 - name: Installation of named daemon settings file
   ansible.builtin.template:
