Add default Prometheus exporter

--- a/production/roles/common/tasks/main.yml
+++ b/production/roles/common/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install the rsyslog configuration
+- name: Install default packages
   ansible.builtin.apt:
     pkg:
     - rsyslog
@@ -9,6 +9,8 @@
     - chrony
     - openssl
     - ca-certificates
+    - prometheus-node-exporter
+    - prometheus-node-exporter-collectors
 
 - name: Start the NTP server
   ansible.builtin.service:
