--- a/production/roles/bind-primary/tasks/main.yml
+++ b/production/roles/bind-primary/tasks/main.yml
@@ -6,70 +6,10 @@
     - bind9-utils
     - prometheus-bind-exporter
 
-- name: Create the dev folder
-  ansible.builtin.file:
-    path: /var/lib/bind/dev
-    state: directory
-    owner: root
-    group: bind
-    mode: '0755'
-
-- name: Create the etc folder
-  ansible.builtin.file:
-    path: /var/lib/bind/etc/bind
-    state: directory
-    owner: root
-    group: bind
-    mode: '0755'
-
-- name: Create the run/named folder
-  ansible.builtin.file:
-    path: /var/lib/bind/var/run/named
-    state: directory
-    owner: root
-    group: bind
-    mode: '0755'
-
-- name: Create the cache folder
-  ansible.builtin.file:
-    path: /var/lib/bind/var/cache/bind
-    state: directory
-    owner: root
-    group: bind
-    mode: '0775'
-
-- name: Create the usr/share/dns folder
-  ansible.builtin.file:
-    path: /var/lib/bind/usr/share/dns
-    state: directory
-    owner: root
-    group: root
-    mode: '0755'
-
-- name: Create the null device file
-  ansible.builtin.command: mknod /var/lib/bind/dev/null c 1 3 -m 0666
-  args:
-    creates: /var/lib/bind/dev/null
-
-- name: Create the random device file
-  ansible.builtin.command: mknod /var/lib/bind/dev/random c 1 8 -m 0666
-  args:
-    creates: /var/lib/bind/dev/random
-
-- name: Installation of named daemon settings file
-  ansible.builtin.template:
-    src: ../templates/named.j2
-    dest: /etc/default/named
-    owner: root
-    group: root
-    mode: '0644'
-  notify:
-    - Restart bind9
-
 - name: Installation of db.10.168.192.in-addr.arpa
   ansible.builtin.template:
     src: ../templates/db.10.168.192.in-addr.arpa.j2
-    dest: /var/lib/bind/etc/bind/db.10.168.192.in-addr.arpa
+    dest: /etc/bind/db.10.168.192.in-addr.arpa
     owner: root
     group: bind
     mode: '0640'
@@ -79,7 +19,7 @@
 - name: Installation of db.exo-industries.xyz
   ansible.builtin.template:
     src: ../templates/db.exo-industries.xyz.j2
-    dest: /var/lib/bind/etc/bind/db.exo-industries.xyz
+    dest: /etc/bind/db.exo-industries.xyz
     owner: root
     group: bind
     mode: '0640'
@@ -89,7 +29,7 @@
 - name: Installation of named.conf.local
   ansible.builtin.template:
     src: ../secrets/named.conf.local.j2
-    dest: /var/lib/bind/etc/bind/named.conf.local
+    dest: /etc/bind/named.conf.local
     owner: root
     group: bind
     mode: '0640'
@@ -99,7 +39,7 @@
 - name: Installation of named.conf.options
   ansible.builtin.template:
     src: ../templates/named.conf.options.j2
-    dest: /var/lib/bind/etc/bind/named.conf.options
+    dest: /etc/bind/named.conf.options
     owner: root
     group: bind
     mode: '0640'
@@ -109,27 +49,9 @@
 - name: Installation of TSIG key
   ansible.builtin.template:
     src: ../secrets/dns1-dns2.key
-    dest: /var/lib/bind/etc/bind/
+    dest: /etc/bind/
     owner: root
     group: bind
     mode: '0640'
-  notify:
-    - Restart bind9
-
-- name: Copy all files in the chroot directory
-  ansible.builtin.command: cp -aprf /etc/bind/ /var/lib/bind/etc/bind/
-  args:
-    creates: /var/lib/bind/etc/bind/
-  notify:
-    - Restart bind9
-
-- name: Copy the root.hints in the chroot directory
-  ansible.builtin.copy:
-    src: /usr/share/dns/
-    dest: /var/lib/bind/usr/share/dns
-    remote_src: yes
-    owner: root
-    group: root
-    mode: '0755'
   notify:
     - Restart bind9
