Use reload instead of restart for nginx

--- a/production/roles/common-nginx/handlers/main.yml
+++ b/production/roles/common-nginx/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Restart nginx
+- name: Reload nginx
   ansible.builtin.service:
     name: nginx
-    state: restarted
+    state: reloaded
     enabled: true
