Start services for GLPI

--- a/production/roles/glpi/tasks/main.yml
+++ b/production/roles/glpi/tasks/main.yml
@@ -16,10 +16,22 @@
     - mariadb-server
     - php-fpm
 
+- name: Start and enable the php-fpm service
+  ansible.builtin.service:
+    name: php{{ php_version }}-fpm
+    state: started
+    enabled: true
+
+- name: Start and enable the mariadb service
+  ansible.builtin.service:
+    name: mariadb
+    state: started
+    enabled: true
+
 - name: Installation of the glpi configuration
   ansible.builtin.template:
     src: ../templates/glpi.j2
-    dest: /etc/nginx/sites/available
+    dest: /etc/nginx/sites-available
     owner: root
     group: root
     mode: 0644
