--- a/production/roles/glpi/tasks/main.yml
+++ b/production/roles/glpi/tasks/main.yml
@@ -44,6 +44,7 @@
     owner: root
     group: root
     mode: "0644"
+  notify: Reload nginx
 
 - name: Activation of the GLPI website
   ansible.builtin.file:
