--- a/production/roles/glpi/handlers/main.yml
+++ b/production/roles/glpi/handlers/main.yml
@@ -10,3 +10,9 @@
     name: nginx
     state: reloaded
     enabled: true
+
+- name: Restart php-fpm
+  ansible.builtin.service:
+    name: php{{ php_version }}-fpm
+    state: restarted
+    enabled: true
