--- a/production/roles/common-nginx/tasks/main.yml
+++ b/production/roles/common-nginx/tasks/main.yml
@@ -13,7 +13,7 @@
 - name: Install the default nginx configuration
   ansible.builtin.copy:
     src: ../templates/nginx.conf.j2
-    dest: /etc/nginx
+    dest: /etc/nginx/nginx.conf
     owner: root
     group: root
     mode: 0644
