--- a/production/roles/glpi/tasks/main.yml
+++ b/production/roles/glpi/tasks/main.yml
@@ -90,3 +90,27 @@
     mode: "0644"
   notify:
     - Restart php-fpm
+
+- name: Removes anonymous user account for localhost
+  mysql_user:
+    name: ''
+    host: localhost
+    state: absent
+
+- name: Removes all anonymous user accounts
+  mysql_user:
+    name: ''
+    host_all: yes
+    state: absent
+
+- name: Create the database
+  mysql_db:
+    name: {{ glpi_db }}
+    state: present
+
+- name: Create database user and password with all database privileges
+  mysql_user:
+    name: {{ glpi_dbuser }}
+    password: {{ glpi_dbpasswd }}
+    priv: '*.*:ALL'
+    state: present
