--- a/production/roles/glpi/tasks/main.yml
+++ b/production/roles/glpi/tasks/main.yml
@@ -108,6 +108,7 @@
   mysql_db:
     name: "{{ glpi_db }}"
     state: present
+  no_log: true
 
 - name: Create database user and password with all database privileges
   mysql_user:
@@ -115,3 +116,4 @@
     password: "{{ glpi_dbpasswd }}"
     priv: '*.*:ALL'
     state: present
+  no_log: true
