restart gitlab when conf is applied

--- a/production/roles/gitlab/tasks/main.yml
+++ b/production/roles/gitlab/tasks/main.yml
@@ -21,7 +21,9 @@
     owner: root
     group: root
     mode: "0600"
-  notify: Reconfiguration of gitlab
+  notify:
+    - Reconfiguration of gitlab
+    - Restart gitlab
 
 - name: Creation of the SSL directory
   ansible.builtin.file:
