Add the new default webserver user account

--- a/production/roles/common-nginx/tasks/main.yml
+++ b/production/roles/common-nginx/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Creation of the web user for nginx
   ansible.builtin.user:
-    name: web
+    name: "{{ nginx_user }}"
     comment: Webserver user
     uid: 9999
     home: /dev/null
