Use replace instead of lineinfile. Quoted variables

--- a/production/roles/glpi/tasks/main.yml
+++ b/production/roles/glpi/tasks/main.yml
@@ -83,10 +83,10 @@
     - Restart nginx
 
 - name: Add the new nginx user in the www pool
-  ansible.builtin.lineinfile:
+  ansible.builtin.replace:
     path: /etc/php/{{ php_version }}/fpm/pool.d/www.conf
-    regexp: 'www-data'
-    line: {{ nginx_user }}
+    before: 'www-data'
+    after: "{{ nginx_user }}"
     owner: root
     group: root
     mode: '0644'
