--- a/production/roles/common-nginx/tasks/main.yml
+++ b/production/roles/common-nginx/tasks/main.yml
@@ -21,7 +21,7 @@
     - Reload nginx
 
 - name: Install the default nginx configuration
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: ../templates/nginx.conf.j2
     dest: /etc/nginx/nginx.conf
     owner: root
