Add update_cache before the instalaltion of Zabbix

--- a/production/roles/zabbix/tasks/main.yml
+++ b/production/roles/zabbix/tasks/main.yml
@@ -15,6 +15,7 @@
 
 - name: Installation of required packages
   ansible.builtin.apt:
+  update_cache: true
     pkg:
     - zabbix-server-mysql
     - zabbix-frontend-php
