--- a/production/roles/zabbix/tasks/main.yml
+++ b/production/roles/zabbix/tasks/main.yml
@@ -17,6 +17,7 @@
   ansible.builtin.apt:
     update_cache: true
     pkg:
+    - mariadb-server
     - zabbix-server-mysql
     - zabbix-frontend-php
     - zabbix-nginx-conf
@@ -57,3 +58,8 @@
     password: "{{ zabbix_dbpasswd }}"
     priv: '*.*:ALL'
     state: present
+
+- name: Import initial schema and data
+  ansible.builtin.shell: zcat /usr/share/zabbix-sql-scripts/mysql/server.sql.gz | mysql --default-character-set=utf8mb4 -uzabbix -p zabbix
+  args:
+    executable: /bin/bash
